[LBA] Fix RTE on Live when bootstrap infor is null - removed unneeded trace messages - verify that bootstrap information is not null before using it
git-svn-id: http://svn.code.sf.net/adobe/osmf/svn/osmf/trunk@2093 a9308255-753e-0410-a2e9-80b3fbc4fff6

--- a/apps/samples/framework/LateBindingAudioSample/src/LateBindingAudioSample.mxml
+++ b/apps/samples/framework/LateBindingAudioSample/src/LateBindingAudioSample.mxml
@@ -294,6 +294,10 @@
 								data:"http://zeridemo-f.akamaihd.net/content/inoutedit-mbr/inoutedit_h264_3000.f4m"	
 							},
 							{
+								label:"Legacy Live HDS manifest",
+								data:"http://10.131.237.107/live/videostream.f4m"
+							},
+							{
 								label:"VOD: 1 video with 2 alternative audio tracks", 
 								data:"http://10.131.237.104/vod/late_binding_audio/API_tests_assets/1_media_v_2_alternate_a/1_media_v_2_alternate_a.f4m"	
 							},
