--- a/apps/samples/framework/LateBindingAudioSample/src/LateBindingAudioSample.mxml
+++ b/apps/samples/framework/LateBindingAudioSample/src/LateBindingAudioSample.mxml
@@ -12,6 +12,7 @@
 		<![CDATA[
 			import mx.collections.ArrayCollection;
 			import mx.events.FlexEvent;
+			import mx.events.IndexChangedEvent;
 			
 			import org.osmf.containers.MediaContainer;
 			import org.osmf.elements.DurationElement;
@@ -33,6 +34,7 @@
 			import org.osmf.media.MediaPlayerState;
 			import org.osmf.media.URLResource;
 			import org.osmf.metadata.MetadataNamespaces;
+			import org.osmf.net.DynamicStreamingItem;
 			import org.osmf.net.MediaItem;
 			import org.osmf.utils.OSMFSettings;
 			
@@ -123,6 +125,20 @@
 				}
 			}
 			
+			protected function onStreamSelectionChange(event:IndexChangeEvent):void
+			{
+				var dropDown:DropDownList = event.target as DropDownList;
+				if (dropDown != null)
+				{
+					if (player.isDynamicStream)
+					{
+						var selectedIndex:int = dropDown.selectedIndex;
+						trace("[LBA - Sample] Chaning bitrate index to ", selectedIndex);
+						player.switchDynamicStreamIndex(selectedIndex);
+					}
+				}				
+			}			
+			
 			/**
 			 * @private
 			 * Clears existing resource.
@@ -163,7 +179,7 @@
 			private function updateUI():void
 			{
 				btnPlayPause.enabled = player.canPlay;
-				listLanguages.enabled = (player.state == MediaPlayerState.READY && player.hasAlternativeAudio);
+				listLanguages.enabled = (player.state != MediaPlayerState.PLAYBACK_ERROR && player.state != MediaPlayerState.UNINITIALIZED && player.hasAlternativeAudio);
 				chkAutoRewind.selected = player.autoRewind;
 				chkAutoRewind.enabled = (player.state != MediaPlayerState.PLAYBACK_ERROR && player.state != MediaPlayerState.UNINITIALIZED);
 			}
@@ -214,10 +230,11 @@
 					languages = new ArrayCollection();
 					alternativeLanguage = -1;
 					
+					var index:int = 0;
 					if (targetPlayer.hasAlternativeAudio)
 					{
 						trace("[LBA - Sample] Alternative audio tracks available.");
-						for (var index:int = 0; index < targetPlayer.numAlternativeAudio; index++)
+						for (index = 0; index < targetPlayer.numAlternativeAudio; index++)
 						{
 							var item:MediaItem = targetPlayer.getMediaItemForAlternativeAudioIndex(index);
 							trace("[LBA - Sample] ", item.language, "]", item.label);
@@ -226,6 +243,22 @@
 							languageItem["label"] = item.label + "(" + item.language + ")";
 							languageItem["data"] = index;
 							languages.addItem(languageItem); 
+						}
+					}
+					
+					streams = new ArrayCollection();
+					
+					if (targetPlayer.isDynamicStream)
+					{
+						trace("[LBA - Sample] Dynamic streams available.");
+						for (index = 0; index < targetPlayer.numDynamicStreams; index++)
+						{
+							var bitrate:Number = targetPlayer.getBitrateForDynamicStreamIndex(index);
+							trace("[LBA - Sample] Bitrate :", bitrate);
+							
+							var bitRateItem:Object = new Object();
+							bitRateItem["data"] = bitRateItem["label"] = bitrate;
+							streams.addItem(bitrate);
 						}
 					}
 				}
@@ -250,6 +283,21 @@
 					player.play();
 			}
 			
+			/**
+			 * @private 
+			 * Snap the current media element to live.
+			 **/
+			private function onSnapToLiveClick(event:MouseEvent):void
+			{
+				if (player != null && player.state == MediaPlayerState.PLAYING)
+				{
+					if (player.canSeek)
+					{
+						player.seek(10000);
+					}
+				}
+			}
+
 			private function onSeekRequest():void
 			{
 				var seekTarget:Number = sldSeek.value;	
@@ -261,7 +309,12 @@
 			{
 				player.autoRewind = chkAutoRewind.selected;
 			}
-
+			
+			private function onAutoSwitchChange(event:Event):void
+			{
+				player.autoDynamicStreamSwitch = chkAutoSwitch.selected;
+			}
+			
 			/**
 			 * @private
 			 * Listen for audio stream events.
@@ -280,7 +333,14 @@
 			private var player:MediaPlayer = null;
 			private var factory:MediaFactory = null;
 			private var container:MediaContainer = null;
+			
 			private var alternativeLanguage:int = -1;
+			private var dynamicStream:int = -1;
+			
+			private var seekedToLive:Boolean = false;
+			
+			[Bindable]
+			protected var streams:ArrayCollection = null;
 			
 			[Bindable]
 			protected var languages:ArrayCollection = null;
@@ -298,6 +358,10 @@
 								data:"http://10.131.237.107/live/videostream.f4m"
 							},
 							{
+								label:"Legacy live HDS manifest without DVR",
+								data:"http://10.122.233.48/live/events/livepkgr/events/_definst_/liveevent.f4m" 
+							},
+							{
 								label:"VOD: 1 video with 2 alternative audio tracks", 
 								data:"http://10.131.237.104/vod/late_binding_audio/API_tests_assets/1_media_v_2_alternate_a/1_media_v_2_alternate_a.f4m"	
 							},
@@ -306,8 +370,16 @@
 								data:"http://10.131.237.104/vod/late_binding_audio/API_tests_assets/1_media_av_2_alternate_a/1_media_av_2_alternate_a.f4m"	
 							},
 							{
+								label:"MBR: 1 mbr stream with 2 alternative audio tracks",
+								data:"http://10.131.237.107/vod/mbr/sample1_audio2.f4m"	
+							},
+							{
 								label:"LIVE: 1 video with 2 alternative audio tracks",
 								data:"http://10.131.237.107/live/events/latebind/events/_definst_/liveevent.f4m"
+							},
+							{
+								label:"LIVE: 1 video with 1 alternate audio track",
+								data:"http://10.131.237.107/live/purelive_lba.f4m"
 							}
 						];
 
@@ -362,9 +434,13 @@
 							/>
 				</s:layout>
 				<s:Button id="btnPlayPause" label="Play" click="onPlayPauseClick(event)" />
+				<s:Button id="btnSnapToLive" label="Live" click="onSnapToLiveClick(event)" />
 				<s:HSlider id="sldSeek" snapInterval="1" width="300" change="onSeekRequest()" />
 				<s:Spacer width="100%" />
-				<s:DropDownList id="listLanguages" width="200" dataProvider="{languages}" change="onLanguageSelectionChange(event)"/>
+				<s:VGroup>
+					<s:DropDownList id="listStreams" width="200" dataProvider="{streams}" change="onStreamSelectionChange(event)"/>
+					<s:DropDownList id="listLanguages" width="200" dataProvider="{languages}" change="onLanguageSelectionChange(event)"/>
+				</s:VGroup>
 			</s:Group>
 			<s:Group>
 				<s:layout>
@@ -375,6 +451,7 @@
 						/>
 				</s:layout>
 				<s:CheckBox id="chkAutoRewind" label="autoRewind" change="onAutoRewindChange(event)" />
+				<s:CheckBox id="chkAutoSwitch" label="autoSwitch" change="onAutoSwitchChange(event)" />
 			</s:Group>
 		</s:Panel>
 	</s:Group>
