Fix for FM-1293 (http://bugs.adobe.com/jira/browse/FM-1293) - DVR information is now propagated only from main stream ( never from alternate audio stream)
- partial reactivation of LBA


git-svn-id: http://svn.code.sf.net/adobe/osmf/svn/osmf/trunk@2107 a9308255-753e-0410-a2e9-80b3fbc4fff6

--- a/apps/samples/framework/LateBindingAudioSample/src/LateBindingAudioSample.mxml
+++ b/apps/samples/framework/LateBindingAudioSample/src/LateBindingAudioSample.mxml
@@ -359,6 +359,10 @@
 								label:"Legacy Live HDS manifest",
 								data:"http://10.131.237.107/live/videostream.f4m"
 							},
+							{
+								label:"Legacy Live HDS with DVR",
+								data:" http://10.131.237.107/live/events/hs_sbr_dvr/events/_definst_/liveevent.f4m"
+							},
 							{ 
 								label:"Legacy Live HDS manifest with MBR",
 								data:"http://10.131.237.107/live/events/hs_mbr_live/events/_definst_/liveevent.f4m"
