LBA updates - fix FM-1293 bug (http://bugs.adobe.com/jira/browse/FM-1293) - add legacy integration tests for HDS
git-svn-id: http://svn.code.sf.net/adobe/osmf/svn/osmf/trunk@2124 a9308255-753e-0410-a2e9-80b3fbc4fff6

--- a/framework/OSMFIntegrationTestNew/src/FlexUnitApplication.mxml
+++ b/framework/OSMFIntegrationTestNew/src/FlexUnitApplication.mxml
@@ -7,14 +7,17 @@
 			   xmlns:mx="library://ns.adobe.com/flex/mx" minWidth="955" minHeight="600" xmlns:flexui="flexunit.flexui.*" creationComplete="onCreationComplete()">
 	<fx:Script>
 		<![CDATA[
-			import org.osmf.player.media.TestLateBindingAudio;
-			import org.osmf.player.media.OSMFTests;
+			import org.osmf.media.TestMediaPlayerWithLegacyHDSSBR;
+			import org.flexunit.runner.Request;
 			
 			public function currentRunTestSuite():Array
 			{
 				var testsToRun:Array = new Array();
-				testsToRun.push(org.osmf.player.media.OSMFTests);
-				testsToRun.push(org.osmf.player.media.TestLateBindingAudio);
+				
+				testsToRun.push(Request.methods(org.osmf.media.TestMediaPlayerWithLegacyHDSSBR,["playLegacyHDSSBRWithLive",
+					"playLegacyHDSSBRWithLiveDRM",
+					"playLegacyHDSSBRWithDVR",
+					"playLegacyHDSSBRWithVOD"]));
 				return testsToRun;
 			}
 			
