--- a/framework/OSMFIntegrationTestNew/src/FlexUnitCompilerApplication.mxml
+++ b/framework/OSMFIntegrationTestNew/src/FlexUnitCompilerApplication.mxml
@@ -8,10 +8,14 @@ Please click on the "Refresh" icon in "FlexUnit Results" view to regenerate this
 			   xmlns:mx="library://ns.adobe.com/flex/mx" minWidth="955" minHeight="600">
 	<fx:Script>
 		<![CDATA[
-			import org.osmf.player.media.OSMFTests;
+			import org.osmf.media.TestMediaPlayerHelper;
+			import org.osmf.OSMFTests;
 			import org.osmf.player.media.TestLateBindingAudio;
 			
-			private var org_osmf_player_media_OSMFTests_obj:org.osmf.player.media.OSMFTests;
+			private var org_osmf_media_TestMediaPlayerHelper_obj:org.osmf.media.TestMediaPlayerHelper;
+			
+			
+			private var org_osmf_player_media_OSMFTests_obj:org.osmf.OSMFTests;
 			
 			
 			private var org_osmf_player_media_TestLateBindingAudio_obj:org.osmf.player.media.TestLateBindingAudio;
