Integrate of PARB review over LBA - renaming MediaItem class to StreamingItem - renaming MediaItemType class to StreamingItemType - various properties and methods updates (AlternativeAudioTrait, AlternativeAudioEvent, MediaPlayer) - unit tests and integration tests updated
NOTE: OSMFTestNew still not compiling.


git-svn-id: http://svn.code.sf.net/adobe/osmf/svn/osmf/trunk@2129 a9308255-753e-0410-a2e9-80b3fbc4fff6

--- a/framework/OSMFIntegrationTestNew/src/FlexUnitApplication.mxml
+++ b/framework/OSMFIntegrationTestNew/src/FlexUnitApplication.mxml
@@ -8,16 +8,15 @@
 	<fx:Script>
 		<![CDATA[
 			import org.osmf.media.TestMediaPlayerWithLegacyHDSSBR;
-			import org.flexunit.runner.Request;
+			import org.osmf.media.TestMediaPlayerWithAlternateAudioHDSSBR_InitialIndex;
+			import org.osmf.media.TestMediaPlayerWithAlternateAudioHDSSBR;
 			
 			public function currentRunTestSuite():Array
 			{
 				var testsToRun:Array = new Array();
-				
-				testsToRun.push(Request.methods(org.osmf.media.TestMediaPlayerWithLegacyHDSSBR,["playLegacyHDSSBRWithLive",
-					"playLegacyHDSSBRWithLiveDRM",
-					"playLegacyHDSSBRWithDVR",
-					"playLegacyHDSSBRWithVOD"]));
+				testsToRun.push(org.osmf.media.TestMediaPlayerWithAlternateAudioHDSSBR);
+				testsToRun.push(org.osmf.media.TestMediaPlayerWithAlternateAudioHDSSBR_InitialIndex);
+				testsToRun.push(org.osmf.media.TestMediaPlayerWithLegacyHDSSBR);
 				return testsToRun;
 			}
 			
