--- a/apps/samples/framework/LateBindingAudioSample/src/LateBindingAudioSample.mxml
+++ b/apps/samples/framework/LateBindingAudioSample/src/LateBindingAudioSample.mxml
@@ -35,7 +35,7 @@
 			import org.osmf.media.URLResource;
 			import org.osmf.metadata.MetadataNamespaces;
 			import org.osmf.net.DynamicStreamingItem;
-			import org.osmf.net.MediaItem;
+			import org.osmf.net.StreamingItem;
 			import org.osmf.utils.OSMFSettings;
 			
 			import spark.components.supportClasses.DropDownController;
@@ -69,7 +69,7 @@
 				player.addEventListener(MediaPlayerCapabilityChangeEvent.CAN_PLAY_CHANGE, onPlayerCanPlayChange);
 				player.addEventListener(TimeEvent.DURATION_CHANGE, onDurationChange);
 				player.addEventListener(TimeEvent.CURRENT_TIME_CHANGE, onPlayerCurrentTimeChange);
-				player.addEventListener(AlternativeAudioEvent.STREAM_CHANGE, onPlayerAudioStreamChange);
+				player.addEventListener(AlternativeAudioEvent.AUDIO_SWITCHING_CHANGE, onPlayerAudioStreamChange);
 				player.addEventListener(MediaErrorEvent.MEDIA_ERROR, onPlayerError);
 								
 				// container
@@ -113,14 +113,17 @@
 				var dropDown:DropDownList = event.target as DropDownList;
 				if (dropDown != null)
 				{
-					alternativeLanguage = dropDown.selectedIndex;
-					trace("[LBA - Sample] Selected language index :", alternativeLanguage);
-					if (dropDown.selectedItem != null && dropDown.selectedItem.hasOwnProperty("label"))
-						trace("[LBA - Sample] Selected language :", dropDown.selectedItem["label"]);
-					
-					if (player.hasAlternativeAudio)
+					var selectedItem:Object = dropDown.selectedItem;
+					if (selectedItem != null)
 					{
-						player.changeAlternativeAudioIndexTo(alternativeLanguage);
+						alternativeLanguage = selectedItem.data;
+						trace("[LBA - Sample] Selected language index :", alternativeLanguage);
+						trace("[LBA - Sample] Selected language :", dropDown.selectedItem["label"]);
+						
+						if (player.hasAlternativeAudio)
+						{
+							player.switchAlternativeAudioIndex(alternativeLanguage);
+						}
 					}
 				}
 			}
@@ -133,7 +136,7 @@
 					if (player.isDynamicStream)
 					{
 						var selectedIndex:int = dropDown.selectedIndex;
-						trace("[LBA - Sample] Chaning bitrate index to ", selectedIndex);
+						trace("[LBA - Sample] Changing bitrate index to ", selectedIndex);
 						player.switchDynamicStreamIndex(selectedIndex);
 					}
 				}				
@@ -236,13 +239,19 @@
 					if (targetPlayer.hasAlternativeAudio)
 					{
 						trace("[LBA - Sample] Alternative audio tracks available.");
-						for (index = 0; index < targetPlayer.numAlternativeAudio; index++)
+						
+						var languageItem:Object = new Object();
+						languageItem["label"] = "Default";
+						languageItem["data"] = -1;
+						languages.addItem(languageItem); 
+						
+						for (index = 0; index < targetPlayer.numAlternativeAudioStreams; index++)
 						{
-							var item:MediaItem = targetPlayer.getMediaItemForAlternativeAudioIndex(index);
-							trace("[LBA - Sample] ", item.language, "]", item.label);
+							var item:StreamingItem = targetPlayer.getAlternativeAudioItemAt(index);
+							trace("[LBA - Sample] ", item.info.language, "]", item.info.label);
 							
-							var languageItem:Object = new Object();
-							languageItem["label"] = item.label + "(" + item.language + ")";
+							languageItem = new Object();
+							languageItem["label"] = item.info.label + "(" + item.info.language + ")";
 							languageItem["data"] = index;
 							languages.addItem(languageItem); 
 						}
@@ -281,8 +290,16 @@
 			 **/
 			private function onPlayPauseClick(event:MouseEvent):void
 			{
-				if (player.canPlay)
-					player.play();
+				if (!player.playing)
+				{
+					if (player.canPlay)
+						player.play();
+				}
+				else
+				{
+					if (player.canPause)
+						player.pause();
+				}
 			}
 			
 			/**
@@ -323,10 +340,10 @@
 			 **/
 			private function onPlayerAudioStreamChange(event:AlternativeAudioEvent):void
 			{
-				if (event.streamChanging)
-					trace("[LBA - Sample] Alternative audio stream is changing.");
+				if (event.switching)
+					trace("[LBA - Sample] Alternative audio stream is switching.");
 				else
-					trace("[LBA - Sample] Alternative audio change is complete.");
+					trace("[LBA - Sample] Alternative audio switch is complete.");
 			}
 			
 			/**
@@ -394,6 +411,22 @@
 							{
 								label:"LIVE: audio only",
 								data:"http://10.131.237.107/live/events/live_audio_only/events/_definst_/liveevent_audio_only.f4m"
+							},
+							{	
+								label:"SeeSaw/ioko SBR protected content 1 (700)",
+								data:"http://10.131.237.107/vod/mbr/drm/sample1_drm_700kbps.f4m" //http://10.131.237.107/vod/SeeSaw/35321_single_796.f4m"
+							},
+							{	
+								label:"SeeSaw/ioko SBR protected content 2 (1000)",
+								data:"http://10.131.237.107/vod/mbr/drm/sample1_drm_1000kbps.f4m" //http://10.131.237.107/vod/SeeSaw/35322_single_500.f4m"
+							},
+							{	
+								label:"SeeSaw/ioko SBR protected content 3 (1500)",
+								data:"http://10.131.237.107/vod/mbr/drm/sample1_drm_1500kbps.f4m" //http://10.131.237.107/vod/SeeSaw/35323_single_1500.f4m"
+							},
+							{	
+								label:"SeeSaw/ioko MBR protected content",
+								data:"http://10.131.237.107/vod/mbr/drm/sample1_mbr_drm.f4m" //http://10.131.237.107/vod/SeeSaw/seesaw_mbr.f4m"
 							}
 						];
 
