Fix FM-1301 bug ( http://bugs.adobe.com/jira/browse/FM-1301 ) - we were trying to close an unconnected URLStream - added two integration tests (multipleSeek_SwitchBeforePlay and multipleSeek_SwitchAfterPlay) - updated playLegacyHDSSBRWithLiveDRM tests to account for longer DRM library download
git-svn-id: http://svn.code.sf.net/adobe/osmf/svn/osmf/trunk@2137 a9308255-753e-0410-a2e9-80b3fbc4fff6

--- a/framework/OSMFIntegrationTestNew/src/FlexUnitApplication.mxml
+++ b/framework/OSMFIntegrationTestNew/src/FlexUnitApplication.mxml
@@ -8,6 +8,7 @@
 	<fx:Script>
 		<![CDATA[
 			import org.osmf.media.TestMediaPlayerWithLegacy_HDS_SBR;
+			import org.osmf.media.TestMediaPlayerWithAlternateAudio_HDS_SBR_Operations;
 			import org.osmf.media.TestMediaPlayerWithAlternateAudio_HDS_SBR_MultipleSwitches;
 			import org.osmf.media.TestMediaPlayerWithAlternateAudio_HDS_SBR;
 			
@@ -16,6 +17,7 @@
 				var testsToRun:Array = new Array();
 				testsToRun.push(org.osmf.media.TestMediaPlayerWithAlternateAudio_HDS_SBR);
 				testsToRun.push(org.osmf.media.TestMediaPlayerWithAlternateAudio_HDS_SBR_MultipleSwitches);
+				testsToRun.push(org.osmf.media.TestMediaPlayerWithAlternateAudio_HDS_SBR_Operations);
 				testsToRun.push(org.osmf.media.TestMediaPlayerWithLegacy_HDS_SBR);
 				return testsToRun;
 			}
