Fix bug FM-1288 (http://bugs.adobe.com/jira/browse/FM-1288) - the bug has been fixed in a previous change list - this change list contains only an integration tests for this bug
git-svn-id: http://svn.code.sf.net/adobe/osmf/svn/osmf/trunk@2140 a9308255-753e-0410-a2e9-80b3fbc4fff6

--- a/framework/OSMFIntegrationTestNew/src/FlexUnitApplication.mxml
+++ b/framework/OSMFIntegrationTestNew/src/FlexUnitApplication.mxml
@@ -8,6 +8,7 @@
 	<fx:Script>
 		<![CDATA[
 			import org.osmf.media.TestMediaPlayerWithLegacy_HDS_SBR;
+			import org.osmf.media.TestMediaPlayerWithLegacy_HDS_MBR;
 			import org.osmf.media.TestMediaPlayerWithAlternateAudio_HDS_SBR_Operations;
 			import org.osmf.media.TestMediaPlayerWithAlternateAudio_HDS_SBR_MultipleSwitches;
 			import org.osmf.media.TestMediaPlayerWithAlternateAudio_HDS_SBR;
@@ -18,6 +19,7 @@
 				testsToRun.push(org.osmf.media.TestMediaPlayerWithAlternateAudio_HDS_SBR);
 				testsToRun.push(org.osmf.media.TestMediaPlayerWithAlternateAudio_HDS_SBR_MultipleSwitches);
 				testsToRun.push(org.osmf.media.TestMediaPlayerWithAlternateAudio_HDS_SBR_Operations);
+				testsToRun.push(org.osmf.media.TestMediaPlayerWithLegacy_HDS_MBR);
 				testsToRun.push(org.osmf.media.TestMediaPlayerWithLegacy_HDS_SBR);
 				return testsToRun;
 			}
