Integration of Sprint 5 features - rolling window - create Video Element from XML representation of manifest (not from external url) - support for multi-level manifest files - late-binding audio on HDS
( change lists 2142 - 2150)

Severity : IMPORTANT
- major refactorings in f4m classes and httpstreaming
- unit tests and integration tests added and updated





git-svn-id: http://svn.code.sf.net/adobe/osmf/svn/osmf/trunk@2151 a9308255-753e-0410-a2e9-80b3fbc4fff6

--- a/apps/samples/framework/LateBindingAudioSample/src/LateBindingAudioSample.mxml
+++ b/apps/samples/framework/LateBindingAudioSample/src/LateBindingAudioSample.mxml
@@ -173,8 +173,6 @@
 				
 				container.addMediaElement(element);
 				player.media = element;
-				
-				
 			}
 			
 			/**
@@ -292,6 +290,7 @@
 			{
 				if (!player.playing)
 				{
+					player.bufferTime = 0.1;
 					if (player.canPlay)
 						player.play();
 				}
@@ -368,6 +367,10 @@
 			protected var urls:ArrayCollection = null;
 			private static const URLS:Array = 
 						[
+							{
+								label:"Seek outside buffer", 
+								data:"http://10.131.237.107/vod/hs/vod/ex.f4m"
+							},
 							{
 								label:"Legacy HDS manifest", 
 								data:"http://zeridemo-f.akamaihd.net/content/inoutedit-mbr/inoutedit_h264_3000.f4m"	
