LBA update - update HTTPNetStream always uses a mixer for handling video and audio - HTTPStreamSource class is now responsable for downloading and handling of fragment/chunks - HTTPNetStream is just consuming bytes provided by its sources
Minor fixes
- the automatic refresh for bootstrapinformation is done only after the index handler was properly initialized
- the sources will go to live time even in dvr case


git-svn-id: http://svn.code.sf.net/adobe/osmf/svn/osmf/trunk@2156 a9308255-753e-0410-a2e9-80b3fbc4fff6

--- a/apps/samples/framework/LateBindingAudioSample/src/LateBindingAudioSample.mxml
+++ b/apps/samples/framework/LateBindingAudioSample/src/LateBindingAudioSample.mxml
@@ -368,6 +368,14 @@
 			private static const URLS:Array = 
 						[
 							{
+								label:"Rolling window",
+								data:"http://10.131.165.62/live/events/livehds/events/_definst_/liveevent.f4m"
+							},
+							{
+								label:"VOD: 1 video with 2 alternative audio tracks", 
+								data:"http://10.131.165.85/vod/vod/late_binding_audio/API_tests_assets/1_media_v_2_alternate_a/1_media_v_2_alternate_a.f4m"	
+							},
+							{
 								label:"Seek outside buffer", 
 								data:"http://10.131.237.107/vod/hs/vod/ex.f4m"
 							},
@@ -390,10 +398,6 @@
 							{
 								label:"Legacy live HDS manifest without DVR",
 								data:"http://10.122.233.48/live/events/livepkgr/events/_definst_/liveevent.f4m" 
-							},
-							{
-								label:"VOD: 1 video with 2 alternative audio tracks", 
-								data:"http://10.131.237.104/vod/late_binding_audio/API_tests_assets/1_media_v_2_alternate_a/1_media_v_2_alternate_a.f4m"	
 							},
 							{
 								label:"VOD: 1 audio-video with 2 alternative audio tracks",
