Fix for FM-1310 ( http://bugs.adobe.com/jira/browse/FM-1310 ) - updated mixer code which is now intercepting all events from chunks/fragment sources and forward them to NetStream
NOTE:
- we have some unused classes in our codebase ( expect a clean-up change list)

git-svn-id: http://svn.code.sf.net/adobe/osmf/svn/osmf/trunk@2157 a9308255-753e-0410-a2e9-80b3fbc4fff6

--- a/framework/OSMFIntegrationTestNew/src/FlexUnitApplication.mxml
+++ b/framework/OSMFIntegrationTestNew/src/FlexUnitApplication.mxml
@@ -7,6 +7,11 @@
 			   xmlns:mx="library://ns.adobe.com/flex/mx" minWidth="955" minHeight="600" xmlns:flexui="flexunit.flexui.*" creationComplete="onCreationComplete()">
 	<fx:Script>
 		<![CDATA[
+			import org.osmf.media.TestMediaPlayerWithLegacy_HDS_SBR;
+			import org.osmf.media.TestMediaPlayerWithLegacy_HDS_MBR;
+			import org.osmf.media.TestMediaPlayerWithAlternateAudio_HDS_SBR_Operations;
+			import org.osmf.media.TestMediaPlayerWithAlternateAudio_HDS_SBR_MultipleSwitches;
+			import org.osmf.media.TestMediaPlayerWithAlternateAudio_HDS_SBR;
 			import org.osmf.elements.f4mClasses.TestMultiLevelManifestParser;
 			import org.osmf.elements.f4mClasses.TestManifestParser;
 			
@@ -15,6 +20,11 @@
 				var testsToRun:Array = new Array();
 				testsToRun.push(org.osmf.elements.f4mClasses.TestManifestParser);
 				testsToRun.push(org.osmf.elements.f4mClasses.TestMultiLevelManifestParser);
+				testsToRun.push(org.osmf.media.TestMediaPlayerWithAlternateAudio_HDS_SBR);
+				testsToRun.push(org.osmf.media.TestMediaPlayerWithAlternateAudio_HDS_SBR_MultipleSwitches);
+				testsToRun.push(org.osmf.media.TestMediaPlayerWithAlternateAudio_HDS_SBR_Operations);
+				testsToRun.push(org.osmf.media.TestMediaPlayerWithLegacy_HDS_MBR);
+				testsToRun.push(org.osmf.media.TestMediaPlayerWithLegacy_HDS_SBR);
 				return testsToRun;
 			}
 			
