--- a/framework/OSMFTest/OSMFTest.mxml
+++ b/framework/OSMFTest/OSMFTest.mxml
@@ -23,26 +23,24 @@
 *****************************************************/
 -->
 <mx:Application
-	xmlns:mx		="http://www.adobe.com/2006/mxml"
-	xmlns:flexunit	="flexunit.flexui.*"
-	layout			="absolute"
-	creationComplete="runTests()"
+	xmlns:mx		 = "http://www.adobe.com/2006/mxml"
+	xmlns:flexunit	 = "flexunit.flexui.*"
+	layout			 = "absolute"
+	creationComplete = "runTests()"
 	>
 	
 	<mx:Script>
 		<![CDATA[
 
-			import org.osmf.*;
-			import flexunit.framework.TestSuite;
+			//import org.osmf.OSMFTests;
 			
 			private function runTests():void
 			{
-				testRunner.test = new OSMFTests();
-				testRunner.startTest();
+//				testRunner.test = new OSMFTests();
+//				testRunner.startTest();
 			}
 		]]>
 	</mx:Script>
 	
 	<flexunit:TestRunnerBase id="testRunner" width="100%" height="100%"/>
-
 </mx:Application>
