Fix for FM-1247 ( http://bugs.adobe.com/jira/browse/FM-1247 ) - We reset the internal NetStream state using appendBytesAction when alternative tracks become unavailable. - Added a new event type ( ACTION_NEEDED) in HTTPStreamingEvent to signal that HTTPNetStream needs to be reset - Updated HDS mixer to dispatch a new event ACTION_NEEDED when the alternative track become unavailable - Added a couple of new manifest URLs to LateBindingAudioSample.
git-svn-id: http://svn.code.sf.net/adobe/osmf/svn/osmf/trunk@2208 a9308255-753e-0410-a2e9-80b3fbc4fff6

--- a/apps/samples/framework/LateBindingAudioSample/src/LateBindingAudioSample.mxml
+++ b/apps/samples/framework/LateBindingAudioSample/src/LateBindingAudioSample.mxml
@@ -448,6 +448,10 @@
 							{
 								label:"VOD: 1 audio-video with 2 shorter alternative audio tracks",
 								data:"http://10.131.237.104/vod/late_binding_audio/API_tests_assets/1_media_av_2_shorter_alternate_a/1_media_av_2_shorter_alternate_a.f4m"
+							},
+							{
+								label:"VOD: 1 video with 2 shorter alternative audio tracks",
+								data:"http://10.131.237.104/vod/late_binding_audio/API_tests_assets/1_media_v_2_shorter_alternate_a/interview_video_only_2_shorter_alternate_audio.f4m"
 							}
 						];
 
