Update DRMServices to properly support authentication tokens as objects: - added convertToken method 	- if the provided token is a ByteArray then it will be directly used 	- otherwise, the provided token is first converted to a string using its toString() method and resulting string will be serialized as a ByteArray ( using writeUTFBytes and not writeUTF )
Added unit tests for the newly-added method ( TestDRMServices).
Updated OSMFTest application to include the new tests.

git-svn-id: http://svn.code.sf.net/adobe/osmf/svn/osmf/trunk@2369 a9308255-753e-0410-a2e9-80b3fbc4fff6

--- a/framework/OSMFTest/src/OSMFTest.mxml
+++ b/framework/OSMFTest/src/OSMFTest.mxml
@@ -33,6 +33,7 @@
 			import org.osmf.traits.TestBufferTraitAsSubclass;
 			import org.osmf.traits.TestBufferTrait;
 			import org.osmf.traits.TestAudioTrait;
+			import org.osmf.net.drm.TestDRMServices;
 			import org.osmf.net.TestDynamicStreamingResource;
 			import org.osmf.net.TestDynamicStreamingItem;
 			import org.osmf.metadata.TestTimelineMetadata;
@@ -155,6 +156,7 @@
 				testsToRun.push(org.osmf.metadata.TestTimelineMetadata);
 				testsToRun.push(org.osmf.net.TestDynamicStreamingItem);
 				testsToRun.push(org.osmf.net.TestDynamicStreamingResource);
+				testsToRun.push(org.osmf.net.drm.TestDRMServices);
 				testsToRun.push(org.osmf.traits.TestAudioTrait);
 				testsToRun.push(org.osmf.traits.TestBufferTrait);
 				testsToRun.push(org.osmf.traits.TestBufferTraitAsSubclass);
